# Customer_Service_Agent

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: graph.py  runtime.py  state.py
backend/app/agent/nodes/: __init__.py  analyzer.py  common.py  human.py  rag.py  response.py  router.py  tool.py
backend/app/api/: admin.py  chat.py  knowledge.py  order.py  product.py  user.py
backend/app/auth/: jwt.py
backend/app/config/: database.py  settings.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  aftersale.py  agent.py  base.py  conversation.py  evaluation.py  knowledge.py  order.py  product.py  user.py
backend/app/prompts/: customer_service.md  product_agent.md  router.md
backend/app/rag/: __init__.py  chunker.py  embedding.py  retriever.py  vectorstore.py
backend/app/repositories/: admin_repository.py  order_repository.py  product_repository.py  refund_repository.py  trace_repository.py  user_repository.py
backend/app/schemas/: admin.py  chat.py  knowledge.py  order.py  product.py  user.py
backend/app/seed/: init_data.py
backend/app/services/: admin_service.py  agent_service.py  approval_service.py  knowledge_service.py  order_service.py  product_service.py  refund_service.py
backend/app/tools/: __init__.py  common.py  order_tools.py  product_tools.py  refund_tools.py
backend/app/utils/: logger.py
deployment/: README.md  docker-compose.yml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
(+19 files in other folders)
