[tool.poetry]
name = "ai-digital-mall-agent"
version = "0.1.0"
description = "AI Digital Mall Customer Service Agent - LangGraph + RAG + Tool Calling"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {version = "^0.32", extras = ["standard"]}
gunicorn = "^23"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30"
psycopg2-binary = "^2.9"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
redis = "^5.2"
httpx = "^0.28"
python-jose = {version = "^3.3", extras = ["cryptography"]}
bcrypt = "^4.2"
python-multipart = "^0.0.18"
langgraph = "^0.2"
langchain = "^0.3"
langchain-openai = "^0.2"
langchain-community = "^0.3"
qdrant-client = "^1.12"
openai = "^1.58"
tiktoken = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.28"
black = "^24.10"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
